dashboardmenu fix / css lite

--- a/virtualBeacon_front/src/components/style/DashboardMenu.css
+++ b/virtualBeacon_front/src/components/style/DashboardMenu.css
@@ -62,18 +62,6 @@
   padding: 20px;
   right: 0;
   top: 40px;
-  height: 75px;
-  background-color: #233068;
-}
-
-.DashboardMenu-account-options {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 20px;
-  right: 0;
-  top: 40px;
   height: 50px;
   background-color: #233068;
   font-size: 0.9em;
@@ -87,6 +75,24 @@
 
 .DashboardMenu-account-options a:hover {
   text-decoration: underline;
+}
+
+@keyframes slidein {
+  from {
+    transform: translate(0, -100%);
+  }
+  to {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes slideinarrow {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
 }
 
 @media only screen and (max-width: 500px) {
