--- a/virtualBeacon_front/src/components/style/LeafletMin.css
+++ b/virtualBeacon_front/src/components/style/LeafletMin.css
@@ -4,9 +4,18 @@
 }
 
 .Leaflet-min-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   position: absolute;
   cursor: pointer;
   height: 50px;
   width: 50px;
   z-index: 6000;
+  color: white;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(255, 255, 255, 0.3) 50%
+  );
 }
