--- a/virtualBeacon_front/src/screens/style/Dashboard.css
+++ b/virtualBeacon_front/src/screens/style/Dashboard.css
@@ -12,15 +12,22 @@
   height: 100vh;
 }
 
-.Stats-container {
+.Dashboard-right-stats {
+  width: 100%;
+  height: 100%;
 }
 
 .Dashboard-right-stats-header {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin: 20px 0 0 20px;
   font-weight: bold;
   color: #233068;
+}
+
+.Stats-container {
+  width: 100%;
+  height: 100%;
 }
 
 .Dashboard-display-info {
