fix leaflet min center-zoom

--- a/virtualBeacon_front/src/components/style/DashboardInfo.css
+++ b/virtualBeacon_front/src/components/style/DashboardInfo.css
@@ -90,7 +90,9 @@
 }
 
 .DashboardInfo hr {
-  border: 1px #898989 solid;
+  border-top: 2px #898989 solid;
+  border-right: 0;
+  border-left: 0;
   width: 100%;
 }
 
