--- a/virtualBeacon_front/src/components/style/LeafletMin.css
+++ b/virtualBeacon_front/src/components/style/LeafletMin.css
@@ -1,6 +1,6 @@
 .LeafletMin {
-  height: 75px;
-  width: 75px;
+  height: 100%;
+  width: 100%;
 }
 
 .Leaflet-min-block {
@@ -9,8 +9,8 @@
   justify-content: flex-end;
   position: absolute;
   cursor: pointer;
-  height: 50px;
-  width: 50px;
+  height: 100%;
+  width: 100%;
   z-index: 6000;
   color: white;
   background: linear-gradient(
