--- a/virtualBeacon_front/src/components/style/DashboardMenu.css
+++ b/virtualBeacon_front/src/components/style/DashboardMenu.css
@@ -1,5 +1,6 @@
 .DashboardMenu {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   z-index: 3000;
   background-color: #233068;
@@ -12,20 +13,16 @@
   color: white;
 }
 
-.DashboardMenu-body-item a:-webkit-any-link {
-  color: white;
-  cursor: pointer;
-}
-
-.DashboardMenu-body-item {
+.DashboardMenu-body .inactive {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-right: 20px;
-  margin-left: 20px;
+  height: 50%;
+  margin: 10px;
   color: white;
 }
 
-.DashboardMenu-body-item:hover {
+.DashboardMenu-body .inactive:hover {
   cursor: pointer;
 }
 
