--- a/virtualBeacon_front/src/components/style/Leaflet.css
+++ b/virtualBeacon_front/src/components/style/Leaflet.css
@@ -71,6 +71,10 @@ input[type="submit"] {
   align-items: baseline;
 }
 
+.Popup-container-description {
+  overflow-wrap: break-word;
+}
+
 .Popup-container-options {
   display: flex;
   justify-content: flex-end;
