--- a/virtualBeacon_front/src/components/style/DashboardInfo.css
+++ b/virtualBeacon_front/src/components/style/DashboardInfo.css
@@ -118,6 +118,7 @@
   max-width: 90%;
   padding: 5px;
   overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 @media only screen and (max-width: 500px) {
