--- a/virtualBeacon_front/src/components/style/DashboardInfo.css
+++ b/virtualBeacon_front/src/components/style/DashboardInfo.css
@@ -7,7 +7,7 @@
   padding: 0;
   box-shadow: 5px 0px 10px 1px rgba(0, 0, 0, 0.35);
   z-index: 1000;
-  color: #233068;
+  color: #a13c56;
 }
 
 .DashboardInfo-exit {
