--- a/virtualBeacon_front/src/components/style/CardForm.css
+++ b/virtualBeacon_front/src/components/style/CardForm.css
@@ -29,7 +29,7 @@ input {
   height: 500px;
   background-color: white;
   box-shadow: 0px 10px 15px 5px rgba(0, 0, 0, 0.75);
-  color: #233068;
+  color: #a13c56;
 }
 
 .CardForm-Container {
@@ -50,7 +50,7 @@ input {
 }
 
 .CardForm-Login input:nth-child(-n + 4) {
-  border: solid 2px #5ac2ab;
+  border: solid 2px #f08852;
   border-radius: 50px;
   font-family: "Roboto", "Sans-serif";
   font-style: italic;
@@ -82,7 +82,7 @@ input {
   border: none;
   border-radius: 50px;
   color: white;
-  background: #233068;
+  background: #a13c56;
   font-family: "Roboto";
   font-weight: bold;
   font-size: 1em;
@@ -93,7 +93,7 @@ input {
 
 input[type="submit"]:hover {
   cursor: pointer;
-  background: linear-gradient(0.25turn, #233068, #5ac2ab);
+  background: linear-gradient(0.25turn, #a13c56, #f08852);
 }
 
 .CardForm-Visu {
@@ -102,12 +102,7 @@ input[type="submit"]:hover {
   justify-content: center;
   width: 65%;
   color: white;
-  background: linear-gradient(
-    0deg,
-    rgba(35, 48, 104, 1) 0%,
-    rgba(57, 107, 131, 1) 50%,
-    rgba(90, 194, 171, 1) 100%
-  );
+  background: linear-gradient(#f08852, #f08852, #a13c56);
 }
 
 .CardForm-Visu h1 {
@@ -137,7 +132,7 @@ input[type="submit"]:hover {
     background-color: white;
     box-shadow: 0px 10px 15px 5px rgba(0, 0, 0, 0.75);
     border-radius: 15px;
-    color: #233068;
+    color: #a13c56;
   }
 
   .CardForm-Container {
