--- a/virtualBeacon_front/src/components/style/DashboardSearch.css
+++ b/virtualBeacon_front/src/components/style/DashboardSearch.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   background-color: #e8e8e8;
-  color: #233068;
+  color: #a13C56;
   padding-left: 20px;
 }
 
