--- a/virtualBeacon_front/src/screens/style/Dashboard.css
+++ b/virtualBeacon_front/src/screens/style/Dashboard.css
@@ -22,7 +22,7 @@
   align-items: center;
   margin: 20px 0 0 20px;
   font-weight: bold;
-  color: #233068;
+  color: #a13c56;
 }
 
 .Stats-container {
