--- a/virtualBeacon_front/src/components/style/CardForm.css
+++ b/virtualBeacon_front/src/components/style/CardForm.css
@@ -102,7 +102,7 @@ input[type="submit"]:hover {
   justify-content: center;
   width: 65%;
   color: white;
-  background: linear-gradient(#f08852, #f08852, #a13c56);
+  background: linear-gradient(#f08852, #a13c56);
 }
 
 .CardForm-Visu h1 {
@@ -114,11 +114,11 @@ input[type="submit"]:hover {
 }
 
 .CardForm-Visu-Logo {
-  height: 120px;
-  width: 160px;
-  background: rgba(0, 0, 0, 0) url(../../Logo_N-Vibe_V2_white.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: white;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 4em;
+  font-weight: bolder;
 }
 
 @media only screen and (max-width: 500px) {
@@ -169,12 +169,7 @@ input[type="submit"]:hover {
 
   .Cardform-submit {
     width: 100% !important;
-    background: linear-gradient(
-      90deg,
-      rgba(35, 48, 104, 1) 0%,
-      rgba(57, 107, 131, 1) 50%,
-      rgba(90, 194, 171, 1) 100%
-    ) !important;
+    background: linear-gradient(0.25turn, #a13c56, #f08852) !important;
   }
 
   .CardForm-Visu {
