--- a/virtualBeacon_front/src/components/style/DashboardSearch.css
+++ b/virtualBeacon_front/src/components/style/DashboardSearch.css
@@ -1,9 +1,10 @@
 .DashboardSearch {
   display: flex;
   align-items: center;
-  background-color: #e8e8e8;
-  color: #a13C56;
+  background-color: #ececec;
+  color: #a13c56;
   padding-left: 20px;
+  border-bottom: 1px solid lightgray;
 }
 
 .DashboardSearch ul {
